added userServive and implemented JWT Login

--- a/voto-client/src/app/app.component.html
+++ b/voto-client/src/app/app.component.html
@@ -21,7 +21,7 @@
     <i class="smile icon"></i>Login
   </a>
 </sm-sidebar>
-<div class="pusher">
+<div class="pushable">
   <router-outlet></router-outlet>
 </div>
 
