added NewPollComponent and addOption() in PollDetailComponent

--- a/voto-client/src/app/app.component.html
+++ b/voto-client/src/app/app.component.html
@@ -14,6 +14,9 @@
   <a class="item">
     <i class="block layout icon"></i>Latest
   </a>
+  <a class="item" routerLink="/polls/new">
+    <i class="smile icon"></i>New Poll
+  </a>
   <a class="item">
     <i class="smile icon"></i>My Polls
   </a>
