--- a/voto-client/src/app/poll-detail.component.html
+++ b/voto-client/src/app/poll-detail.component.html
@@ -1,4 +1,12 @@
 <div *ngIf="poll">
   <h1>{{poll.title}}</h1>
   <p> chart here </p>
+  <ul>
+    <li *ngFor="let option of options">{{option.title}}</li>
+  </ul>
+  <label>New Option: <input #newOption /></label>
+  <button (click)="addOption(newOption.value); newOption.value = '';"> 
+    Add Option
+  </button>
+      
 </div>
