--- a/voto-client/src/app/polls.component.html
+++ b/voto-client/src/app/polls.component.html
@@ -5,3 +5,13 @@
     </a>
   </div>
 </div>
+<sm-menu class="pagination two item">
+  <a sm-item class="disabled">
+    <i class="angle double left icon"></i>Previous
+  </a>
+  <a sm-item>
+    Next<i class="angle double right icon"></i>
+  </a>
+
+  
+</sm-menu>
