--- a/voto-client/src/app/polls.component.scss
+++ b/voto-client/src/app/polls.component.scss
@@ -6,3 +6,11 @@
     text-align: center;
   }
 }
+
+.pagination {
+  width: 100%;
+  justify-content: space-between;
+  .item {
+    flex:1;
+  }
+}
