--- a/voto-client/src/app/polls/poll/poll.component.html
+++ b/voto-client/src/app/polls/poll/poll.component.html
@@ -8,5 +8,8 @@
   <button (click)="addOption(newOption.value); newOption.value = '';"> 
     Add Option
   </button>
+  <button (click)="deletePoll(poll.id)"> 
+    Delete Poll
+  </button>
       
 </div>
