externalised api calls in api.service and restructured

--- a/voto-client/src/app/app.component.html
+++ b/voto-client/src/app/app.component.html
@@ -28,8 +28,12 @@
       <h1>Voto</h1>
     </a>
   </sm-menu>
-
-  <router-outlet></router-outlet>
+  <sm-message icon="warning">
+    
+  </sm-message>
+  <div class="ui container">
+    <router-outlet></router-outlet>
+  </div>
 </div>
 
 
