--- a/voto-client/src/app/users/login/login.component.html
+++ b/voto-client/src/app/users/login/login.component.html
@@ -1,3 +1,9 @@
 <h1>Log in to create polls and new options</h1>
-<button (click)="fbLogin()">Login with Facebook</button>
-<button (click)="fbLogout()">Logout</button>
+<button class="ui facebook button huge" (click)="fbLogin()">
+  <i class="facebook icon"></i>
+  Log in with Facebook
+</button>
+<button class="ui button huge negative"(click)="fbLogout()">
+  <i class="sign out icon "></i>
+  Logout
+</button>
