--- a/voto-client/src/styles.css
+++ b/voto-client/src/styles.css
@@ -1,1 +1,5 @@
-/*@import "~normalize.css/normalize.css";*/
+/*@import "~normalize.css/normalize.css"; */
+
+.masthead.segment {
+  padding: 5em;
+}
