--- a/voto-client/src/app/polls/poll/poll.component.html
+++ b/voto-client/src/app/polls/poll/poll.component.html
@@ -1,7 +1,9 @@
 <div *ngIf="poll">
   <h1>{{poll.title}}</h1>
-  <poll-option-chart [options]="options"> chart here </poll-option-chart>
-  <poll-option-list [options]="options" (pollChange)="populate();"></poll-option-list>
+  <div *ngIf="options">
+    <poll-option-chart [options]="options"> chart here </poll-option-chart>
+    <poll-option-list [options]="options" (pollChange)="populate();"></poll-option-list>
+  </div>
   <label>New Option: <input #newOption /></label>
   <button (click)="addOption(newOption.value); newOption.value = '';"> 
     Add Option
