--- a/voto-client/src/app/users/login/login.component.html
+++ b/voto-client/src/app/users/login/login.component.html
@@ -3,7 +3,7 @@
   <i class="facebook icon"></i>
   Log in with Facebook
 </button>
-<button class="ui button huge negative"(click)="fbLogout()">
+<button class="ui button huge negative"(click)="logout()">
   <i class="sign out icon "></i>
   Logout
 </button>
