--- a/voto-client/src/app/polls/poll/poll-options/poll-option-chart/poll-option-chart.component.html
+++ b/voto-client/src/app/polls/poll/poll-options/poll-option-chart/poll-option-chart.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="options">
-  <canvas baseChart width="chartWidth" height="chartHeight"
+  <canvas baseChart width="" height=""
           [data]="chartData"
           [labels]="chartLabels"
           [chartType]="chartType"
