--- a/voto-client/src/app/app.component.scss
+++ b/voto-client/src/app/app.component.scss
@@ -1,3 +1,24 @@
 .voto-page-header {
-  font-size: 3em;
+  font-size: 3rem;
+  padding: 2rem;
+}
+
+.ui.message.flash {
+
+  margin-top: 1rem;
+
+  @media (max-width: 768px) {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  
+  @media(min-width: 768px) {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .content {
+    padding: 1rem;
+  }
+
 }
