--- a/voto-client/src/app/polls/poll-list/poll-list.component.scss
+++ b/voto-client/src/app/polls/poll-list/poll-list.component.scss
@@ -1,16 +1,23 @@
-.polls-item{
+.ui.grid > .poll-list-item.column {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  h3 {
-    text-align: center;
-  }
+  justify-content: center;
 }
 
-.pagination {
+.ui.card {
+  width: 100%;
+  padding-top: 1rem;
+}
+
+div.ui.menu.poll-list-pagination {
+  margin-top: 2rem;
   width: 100%;
   justify-content: space-between;
+  @media(max-width: 960px) {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
   .item {
     flex:1;
   }
+
 }
