improved authentication flow by setting up a user behaviorSubject in userService that every component can subscribe to

--- a/voto-client/src/app/polls/poll-list/poll-list.component.html
+++ b/voto-client/src/app/polls/poll-list/poll-list.component.html
@@ -13,11 +13,11 @@
       <div class="extra content">
         <span>
           <i class="pie chart icon"></i>
-          10 Votes
+          {{ poll.totalVotes }} Votes
         </span>
         <span class="right floated">
           <i class="user icon"></i>
-          johannes
+          {{ poll.user.username }}
         </span>
       </div>
     </div>
