--- a/voto-client/src/app/app.component.html
+++ b/voto-client/src/app/app.component.html
@@ -11,15 +11,19 @@
   <a class="item" [routerLink]="['/polls']" [queryParams]="{ sort: 'latest'}">
     <i class="block layout icon"></i>Latest
   </a>
-  <a class="item" routerLink="/polls/new">
-    <i class="smile icon"></i>New Poll
-  </a>
-  <a class="item">
-    <i class="smile icon"></i>My Polls
-  </a>
   <a class="item" routerLink="/login">
     <i class="smile icon"></i>Login
   </a>
+  <a class="item" *ngIf="loggedIn()" routerLink="/polls/new">
+    <i class="smile icon"></i>New Poll
+  </a>
+  <a class="item" *ngIf="loggedIn()" [routerLink]="['/polls']" [queryParams]="{ userId: currentUser.id }">
+    <i class="smile icon"></i>My Polls
+  </a>
+  <a class="item" *ngIf="loggedIn()" (click)="logout()">
+    <i class="smile icon"></i>Logout
+  </a>
+ 
 </sm-sidebar>
 <div class="pusher"> 
   <sm-menu class="huge borderless menu">
