--- a/voto-client/src/app/polls/poll/poll-options/poll-option-chart/poll-option-chart.component.html
+++ b/voto-client/src/app/polls/poll/poll-options/poll-option-chart/poll-option-chart.component.html
@@ -3,7 +3,7 @@
           [data]="chartData"
           [labels]="chartLabels"
           [chartType]="chartType"
-          legend="true"
+          [legend]="true"
           
   ></canvas>
 </div>
