--- a/voto-client/src/app/polls/poll/poll-options/poll-option-list/poll-option-list.component.html
+++ b/voto-client/src/app/polls/poll/poll-options/poll-option-list/poll-option-list.component.html
@@ -14,7 +14,7 @@
     </div>
     
   </div>
-  <div class="ui item two column grid">
+  <div *ngIf="loggedIn" class="ui item two column grid">
     <div class="row ui segment">
       <div class="column">
         <div class="header">New Option</div>
