--- a/voto-client/src/app/polls/poll/poll.component.html
+++ b/voto-client/src/app/polls/poll/poll.component.html
@@ -2,7 +2,28 @@
   <h1 class="ui center aligned header voto-page-header">{{poll.title}}</h1>
   <div class="ui stackable two column grid">
     <div class="column">
-      <poll-option-chart [options]="options"> chart here </poll-option-chart>
+      <poll-option-chart class="poll-option-chart" [options]="options"> chart here </poll-option-chart>
+      <h4 class="header">Share this poll</h4>
+      <div class="ui fluid three item menu">
+        <div class="item">
+          <div class="ui button primary">
+            <i class="facebook icon"></i>
+            Facebook
+          </div>
+        </div>   
+        <div class="item">
+          <div class="ui button teal">
+            <i class="twitter icon"></i>
+            Twitter
+          </div> 
+        </div>
+        <div class="item">
+          <div class="ui button violet">
+            <i class="mail outline icon"></i>
+            Email
+          </div>
+        </div> 
+      </div>
     </div>
     <div class="column poll-option-list">
       <poll-option-list *ngIf="options" [options]="options" [pollId]="poll.id" [loggedIn]="loggedIn()" (pollChange)="populate();"></poll-option-list>
@@ -13,10 +34,20 @@
               <div class="header">Delete this poll</div>
               Can´t be undone
             </div>
-            <div class="column button-column">
-              <button class="ui button negative">
+            <div *ngIf="!attemptingDelete" class="column button-column">
+              <button class="ui button negative" (click)="attemptingDelete = true">
                 <i class="remove icon"></i>
                 Delete
+              </button>
+            </div>
+            <div *ngIf="attemptingDelete" class="column button-column">
+              <button class="ui button negative" (click)="deletePoll(poll.id)">
+                <i class="checkmark icon"></i>
+                Delete
+              </button>
+              <button class="ui button olive" (click)="attemptingDelete = false">
+                <i class="remove circle icon"></i>
+                Cancel
               </button>
             </div>
           </div>
