completed share buttons and error messages
added messageservice, flash component and message model

--- a/voto-client/src/app/app.component.html
+++ b/voto-client/src/app/app.component.html
@@ -37,14 +37,7 @@
     </div>
   </sm-menu>
   <div class="ui container">
-    <div class="ui hidden message flash">
-      <i class="close icon"></i>
-      <div class="content">
-        <div class="header">Global Error
-        </div>
-        <p>{{error}}</p>
-      </div>
-    </div>
+    <flash></flash>
     <router-outlet></router-outlet>
   </div>
 </div>
