--- a/voto-client/src/app/polls/poll-list/poll-list.component.html
+++ b/voto-client/src/app/polls/poll-list/poll-list.component.html
@@ -8,7 +8,7 @@
         </a>
       </div>
       <div class="ui image">
-        <img src="http://placehold.it/600x300">
+        <img src="http://placemorty.us/600/300">
       </div>
       <div class="extra content">
         <span>
